syntax = "proto3";
package inspection;

option go_package = "go.easyops.local/contracts/protorepo-models/easyops/model/inspection";




import "topboard_sdk/model/inspection/user_or_user_group.proto";

/*
巡检任务
*/
message InspectionTask {
message Args {
    /*
    参数ID
    */
    string key = 1 ;
    /*
    参数的值
    */
    string value = 2 ;
    /*
    参数的来源
attr_id: CMDB模型的属性
custom: 自定义

    */
    string source = 3 ;
}
        
message Targets {
    /*
    巡检对象实例ID
    */
    string instanceId = 1 ;
}
        
    
    /*
    巡检任务Id
    */
    string inspectionTaskId = 1 ;
    /*
    巡检任务名称
    */
    string name = 2 ;
    /*
    是否全部通知
    */
    bool isAllNotify = 3 ;
    /*
    邮件通知限制
    */
    string notifyPassComparator = 4 ;
    /*
    邮件通知评分限制
    */
    float notifyScore = 5 ;
    /*
    采集时需要的参数
    */
    repeated Args args = 6 ;
    /*
    通知的用户
    */
    inspection.InspectionUserOrUserGroup notifyUser = 7 ;
    /*
    通知的用户组
    */
    inspection.InspectionUserOrUserGroup notifyUserGroup = 8 ;
    /*
    巡检策略(once单次,crontab周期)
    */
    string taskType = 9 ;
    /*
    执行目标(指定实例,指定查询策略)
    */
    string performanceTargets = 10 ;
    /*
    仅当执行目标为指定查询策略时该参数有效
    */
    string queryStrategyId = 11 ;
    /*
    任务调度时间
    */
    string taskScheduler = 12 ;
    /*
    仅当执行目标为指定实例时该参数有效
    */
    repeated Targets targets = 13 ;
    /*
    备注
    */
    string memo = 14 ;
    /*
    报告模板ID
    */
    string templateId = 15 ;
    /*
    报告模板名
    */
    string templateName = 16 ;
}

